# gate_controller_

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/WiFi/: CMakeLists.txt  wifi.c  wifi.h
components/adc/: CMakeLists.txt  adc.c  adc.h
components/aws_flow_control/: CMakeLists.txt  aws_flow.c  aws_flow.h
components/buttons/: CMakeLists.txt  button.c  button.h
components/common/: CMakeLists.txt  common.h
components/led/: CMakeLists.txt  led.c  led.h
components/nvs/: CMakeLists.txt  nvs.c  nvs.h
components/pairing/: CMakeLists.txt  common.h  pairing.c  pairing.h  pairing_ble.c  pairing_ble.h  pairing_wifi.c  pairing_wifi.h
components/relay/: CMakeLists.txt  relay_modified.c  relay_modified.h
components/schedule/: CMakeLists.txt  Schedule.c  Schedule.h
components/sht40/: cMakeLists.txt  sht40.c  sht40.h
main/: CMakeLists.txt  Kconfig.projbuild  aws.c  aws.h  main.c
main/certs/: client.crt  client.key
